overflow fix

--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -4,7 +4,7 @@
   border-radius: 5px;
   height: fit-content;
   max-height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .title {
