--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -5,5 +5,5 @@
 }
 
 .content {
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
